# maddress

./: README.md  setup.cfg  setup.py  testing.py
domain/: domain_dict.py
maddress/: __init__.py
maddress.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
